L'API de n'affiche pas

--- a/Views/Home/ListeDesStations.cshtml
+++ b/Views/Home/ListeDesStations.cshtml
@@ -1,5 +1,17 @@
-@*
-  For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
+  var stations = ViewBag.allStations;
+}
+
+<button> <a href="/API?v=Bordeaux">Vélov de Bordeaux</a></button>
+<button> <a href="/API?v=Lyon">Vélov de Lyon</a> </button>
+ @foreach (var BikeStation in stations)
+{
+  <div class="text-center">
+    <p>
+
+      <ul class="list-group">
+        <li class="list-group-item">@BikeStation.name</li>
+      </ul>
+    </p>
+  </div>
 }
